# CMake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

# Build type debug
SET(CMAKE_BUILD_TYPE Debug)
# Build option release
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
# Build option debug
SET(CMAKE_C_FLAGS_DEBUG "-W -g")


# Project name
PROJECT(livereload-c)
# Project version
# SET(_VERSION "1.0.0")

# CMake ExternalProject module
INCLUDE(ExternalProject)

# jansson
FIND_PATH(JANSSON_INCLUDES
  jansson.h PATHS /usr/include /usr/include/jansson)

FIND_LIBRARY(JANSSON_LIBRARIES
  NAMES libjansson jansson PATHS /usr/lib64 /usr/lib)

IF(JANSSON_INCLUDES STREQUAL "JANSSON_INCLUDES-NOTFOUND" OR
    JANSSON_LIBRARIES STREQUAL "JANSSON_LIBRARIES-NOTFOUND")
  ExternalProject_ADD(
    jansson
    SOURCE_DIR ${CMAKE_SOURCE_DIR}/third_party/jansson
    CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_CURRENT_BINARY_DIR}/deps
    )
  SET(JANSSON_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/deps/include)
  SET(JANSSON_LIBRARIES ${CMAKE_CURRENT_BINARY_DIR}/deps/lib/libjansson.a)
ENDIF()

INCLUDE_DIRECTORIES(${JANSSON_INCLUDES})
SET(JANSSON_LIBS "${JANSSON_LIBRARIES}")

# inotifytools
FIND_PATH(INOTIFYTOOLS_INCLUDES
  inotify.h PATHS /usr/include /usr/include/inotifytools)

FIND_LIBRARY(INOTIFYTOOLS_LIBRARIES
  NAMES libinotifytools inotifytools
  PATHS /usr/lib64 /usr/lib)

IF(NOT INOTIFYTOOLS_INCLUDES STREQUAL "INOTIFYTOOLS_INCLUDES-NOTFOUND" AND
    NOT INOTIFYTOOLS_LIBRARIES STREQUAL "INOTIFYTOOLS_LIBRARIES-NOTFOUND")
  INCLUDE_DIRECTORIES(${INOTIFYTOOLS_INCLUDES})
  SET(INOTIFYTOOLS_LIBS "${INOTIFYTOOLS_LIBRARIES}")
  ADD_DEFINITIONS(-DHAVE_INOTIFYTOOLS)
ENDIF()

# libwebsockets
FIND_PATH(WEBSOCKETS_INCLUDES
  libwebsockets.h
  PATHS ${WEBSOCKETS_INCLUDE_PATH} /usr/include)

FIND_LIBRARY(WEBSOCKETS_LIBRARIES
  NAMES libwebsockets websockets
  PATHS ${WEBSOCKETS_LIBRARY_PATH} /usr/lib64 /usr/lib)

IF(WEBSOCKETS_INCLUDES STREQUAL "WEBSOCKETS_INCLUDES-NOTFOUND")
  MESSAGE(FATAL_ERROR "libwebsockets could not found libwebsockets.h\n"
    "OPTION: -DWEBSOCKETS_INCLUDE_PATH=path")
ENDIF()

IF(WEBSOCKETS_LIBRARIES STREQUAL "WEBSOCKETS_LIBRARIES-NOTFOUND")
  MESSAGE(FATAL_ERROR "libwebsockets could not found libwebsockets.so\n"
    "OPTION: -DWEBSOCKETS_LIBRARY_PATH=path")
ENDIF()

INCLUDE_DIRECTORIES(${WEBSOCKETS_INCLUDES})
SET(WEBSOCKETS_LIBS "${WEBSOCKETS_LIBRARIES}")


# execute
ADD_EXECUTABLE(livereload-server src/server.c)
TARGET_LINK_LIBRARIES(
  livereload-server ${WEBSOCKETS_LIBS} ${JANSSON_LIBS})

ADD_EXECUTABLE(livereload-client src/client.c)
TARGET_LINK_LIBRARIES(
  livereload-client ${WEBSOCKETS_LIBS} ${JANSSON_LIBS} ${INOTIFYTOOLS_LIBS})

ADD_EXECUTABLE(livereload-filter src/filter.c)
TARGET_LINK_LIBRARIES(livereload-filter)


# install
INSTALL_PROGRAMS(/bin FILES
  ${CMAKE_CURRENT_BINARY_DIR}/livereload-server
  ${CMAKE_CURRENT_BINARY_DIR}/livereload-client
  ${CMAKE_CURRENT_BINARY_DIR}/livereload-filter)
